2004-05-21  Jim Blandy  <jimb@redhat.com>

	* ppc-linux-nat.c (fetch_register): Move code back to be next
	to the comment that describes it.  (Moved code, instead of
	comment, for symmetry with store_register.)

	Allocate regset structures in the gdbarch's obstack, not using
	xmalloc.
	* regset.c (regset_alloc): Renamed from regset_xmalloc.
	Add 'arch' argument.  Allocate the regset on arch's obstack, not
	using xmalloc.
	* regset.h (regset_alloc): Update declaration.
	* am64-tdep.c (amd64_regset_from_core_section): Update call; pass
	gdbarch argument.
	* amd64obsd-tdep.c (amd64obsd_regset_from_core_section): Same.
	* i386-tdep.c (i386_regset_from_core_section): Same.
	* i386nbsd-tdep.c (i386nbsd_aout_regset_from_core_section): Same.
	* i386obsd-tdep.c (i386obsd_aout_regset_from_core_section): Same.
	* sparc64fbsd-tdep.c (sparc64fbsd_init_abi): Same.
	* sparc64nbsd-tdep.c (sparc64nbsd_init_abi): Same.
	* sparc64obsd-tdep.c (sparc64obsd_init_abi): Same.
	* sparcnbsd-tdep.c (sparc32nbsd_init_abi): Same.

2004-05-21  Joel Brobecker  <brobecker@gnat.com>

	* config/djgpp/fnchange.lst: Undo previous change, was useless.

2004-05-21  Jim Blandy  <jimb@redhat.com>

	* dwarf2expr.c (execute_stack_op): Add 'break' statements after
	cases for DW_OP_div and DW_OP_shr.  (Thanks to Reva Cuthbertson.)

2004-05-20  Jim Blandy  <jimb@redhat.com>

	* rs6000-tdep.c (rs6000_push_dummy_call): Formatting fixes.

2004-05-20  Mark Kettenis  <kettenis@gnu.org>

	* regset.h: Make prototype const-correct.
	* regset.c (regset_xmalloc): Make const-correct.

2004-05-20  Paul N. Hilfinger  <hilfinger@gnat.com>

	* symtab.h (SYMBOL_SEARCH_NAME): New definition.
	(SYMBOL_MATCHES_SEARCH_NAME): New definition.
	(symbol_search_name): Declare.
	
	* dictionary.c (iter_name_first_hashed): Match on SYMBOL_SEARCH_NAME.
	(iter_name_next_hashed): Ditto.
	(iter_name_next_linear): Ditto.
	(insert_symbol_hashed): Hash on SYMBOL_SEARCH_NAME.

	* symtab.c (lookup_partial_symbol): Assume symbols ordered by 